# libworkflow

./: .gitignore  CMakeLists.txt
core/: controller.cpp  controller.h  request.h  scheduler.cpp  scheduler.h  state_machine.cpp  temporary_controller.cpp  temporary_controller.h  workflow.cpp  workflow.h
core/schedulers/: one_by_one.cpp  one_by_one.h
service/: server.cpp
tests/: CMakeLists.txt
tools/: defines.h
